kubernetes/apps/network/openclaw/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: openclaw
spec:
  ports:
    - name: http
      port: 18789
      protocol: TCP
      targetPort: 18789
---
apiVersion: v1
kind: Endpoints
metadata:
  name: openclaw
subsets:
  - addresses:
      - ip: 192.168.42.203
    ports:
      - name: http
        port: 18789
        protocol: TCP
